@@ -554,3 +554,4 @@ v0.76.1:
     - Towny will now clean up it's backup folder. Default time to keep backups is 90 days (configurable in config).
     - Fixed default switch and item use permissions for ally and outsider.
     - Finally fixed the elusive error when getLastLocation() throws a NullPointerException.
+    - Fixed an infinate loop when a player uses a fly hack over void.
